  ! CPUID Added Skylake-X CPU definition with AVX-512 support

- Bochs Debugger and Instrumentation
  - Added support for conditional breakpoints and conditional step/continue to Bochs debugger
  - Bochs debugger improvements patch by Doug Gale
    - better handling of 64-bit addresses in the debugger, added support for 64 bit symbols,
      added more symbol lookups.

- I/O Devices
  - PCI
    Added basic support for the i440BX PCI/AGP chipset.
  - Timers
    - Implemented HPET emulation (ported from Qemu).
  - Voodoo
    - Voodoo1 emulation speedup with combined PCI / memory FIFO implementation
      and multi-threading support (separate FIFO thread).
    - Voodoo2 model now working after some fixes and implementation of the
      CMDFIFO (using FIFO thread) and one of the bitBLT functions.
    - Added Voodoo Banshee / Voodoo3 emulation support (still under construction,
      but basicly usable). The AGP models are available if chipset is i440BX.
  - Display (general)
    - Added basic DDC support for Bochs VBE, Cirrus and Voodoo Banshee / Voodoo3
      adapters (reporting plug&play monitor "Bochs Screen").
  - USB
    - Now creating separate plugins for each USB device implementation.
    - Added sector size option for USB disks (size 1024 and 4096 supported).
  - Networking
    - bxhub: Added DNS service support for the server "vnet" and connected
      clients.
  - Sound
    - PC speaker now can play digitized sound by driving speaker gate.

- GUI and display libraries
  - Added new win32 gui option "traphotkeys" for fullscreen mode.
  - wx: Fixes and updates for wxWidgets 3.0 support.
  - Removed legacy guis "macos" and "svga" from display library auto-
    detection (still available using --with-XXX option).

- LGPL'd VGABIOS updated from CVS (VESA extension 'read EDID' for Bochs VBE
  and Cirrus added).

- Misc
  - Added sector size option to bximage for creating flat, sparse and growing